# hymnal

./: .gitignore  README.md  app.py  passenger_wsgi.py  pyproject.toml  requirements.txt
hymnal/: __init__.py  commands.py  db.py  hymns.py  schema.sql  utils.py
hymnal/templates/: base.html  create_edit_hymn.html  create_hymn.html  hymn_list.html  slide.html  songs_list.html
instance/: hymnal.sqlite
templates/: songs_list.html
